# TesseraFlow

./: .env.example  .gitignore  AGENTS.md  Dockerfile  FAQ.md  Makefile  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: pcm-capture.worklet.js
frontend/src/: App.tsx  main.tsx  styles.css  types.ts
src/: bootstrap.py  config.py  main.py
src/api/: event_payloads.py  middleware.py  realtime_event_payloads.py  realtime_websocket.py  routes.py  schemas.py  sse.py  websocket.py
src/application/: a2a.py  agent.py  conversations.py  interactions.py  ports.py  realtime.py  tools.py
src/domain/: __init__.py  a2a.py  agent.py  conversations.py  events.py  interactions.py  model.py  realtime.py  tools.py  turn_events.py  visuals.py
src/infrastructure/: cached_conversations.py  conversation_codec.py  gemini_live_gateway.py  gemini_realtime_gateway.py  interaction_codec.py  logging.py  model_runtime.py  openai_gateway.py  (+5 more)
tests/: test_a2a.py  test_agent_service.py  test_api.py  test_cached_conversations.py  test_config.py  test_conversation_service.py  test_gemini_live_gateway.py  test_gemini_realtime_gateway.py  test_interaction_codec.py  test_interactions.py  test_mock_bizum.py  test_model_runtime.py  test_openai_gateway.py  test_postgres_a2a.py  test_postgres_conversations.py  test_postgres_interaction_notifier.py  test_postgres_interactions.py  test_present_visual.py  test_realtime_agent.py  test_redis_conversations.py  test_weekly_balance_history.py
(+35 files in other folders)
