[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tesseraflow"
version = "0.1.0"
description = "A provider-neutral framework for asynchronous agent tools and streamed outputs."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "asyncpg>=0.30,<1.0",
  "fastapi>=0.115,<1.0",
  "httpx>=0.28,<1.0",
  "openai>=2.0,<3.0",
  "pydantic-settings>=2.7,<3.0",
  "redis>=5.2,<7.0",
  "structlog>=24.4,<26.0",
  "uvicorn[standard]>=0.34,<1.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.14,<2.0",
  "pytest>=8.3,<9.0",
  "pytest-asyncio>=0.25,<1.0",
  "ruff>=0.9,<1.0",
  "types-asyncpg>=0.30,<1.0",
]

[tool.hatch.build.targets.wheel]
only-include = ["src"]
sources = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
files = ["src"]
